# laiver

./: .env.example  .gitignore  .npmrc  README.md  agent.md  docker-compose.yml  package-lock.json  package.json  project.md  some ideas from hermes.md  tsconfig.base.json
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260317_0001_initial.py  20260404_0002_runtime_schema_alignment.py  20260422_0003_model_provider_extensibility.py  20260422_0004_local_fine_tune_jobs.py  20260422_0005_local_adapter_registration.py  20260423_0006_companion_memory_v2.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py  enums.py
apps/api/app/db/: base.py  init_db.py  session.py
apps/api/app/models/: __init__.py  base.py  conversation.py  fine_tuning.py  import_job.py  memory.py  memory_candidate.py  memory_episode.py  memory_fact.py  memory_revision.py  relationship_state.py  runtime.py  user.py  user_profile.py
apps/api/app/schemas/: __init__.py  agent.py  conversation.py  fine_tuning.py  import_job.py  memory.py  memory_candidate.py  memory_episode.py  memory_fact.py  persona.py  relationship_state.py  runtime.py  user.py  user_profile.py
apps/api/app/services/: agent_orchestrator.py  connector_service.py  conversation_summary_service.py  fine_tuning_service.py  import_service.py  local_adapter_runtime.py  local_fine_tune_runner.py  memory_service.py  model_router.py  persona_service.py  skill_runtime.py
apps/api/app/utils/: text.py
apps/api/tests/: test_integration.py
docs/: architecture.md  (+1 more)
(+117 files in other folders)
